--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -116,20 +116,13 @@
       <div>
         <h5 class="wslab-section-label">おしらせ</h5>
         <div style="text-align: left;">
-        <p>● 2018/6/19 - [6/21-22] 長瀞ー豊洲 荒川１２０km SUPダウンリバーをサポート!</p>
-        <p>● 2018/5/10 - GULLCAST　ANAウインドサーフィンワールドカップ横須賀大会観戦版の公開！</p>
-        <p>● 2018/4/25 - GULLCAST観戦アプリケーションダウンロードサイトの準備中</p>
+        <p>● 2019/05/02  - 2019 ANAウインドサーフィンワールドカップ横須賀・三浦大会観戦版のアップデート公開</p>
+        <p>● 2018/06/19 - [6/21-22] 長瀞ー豊洲 荒川１２０km SUPダウンリバーをサポート!</p>
+        <p>● 2018/05/10 - GULLCAST　ANAウインドサーフィンワールドカップ横須賀大会観戦版の公開！</p>
+        <p>● 2018/04/25 - GULLCAST観戦アプリケーションダウンロードサイトの準備中</p>
         </div>
       </div>
     </section>
-
-    <section class="wslab-section wslab-about">
-    <div>
-      <h5 class="wslab-section-label"> SUPダウンリバートラッキング オートデモンストレーション<br>（名前をクリックすると、速度がリアルタイムに表示されます）</h5>
-    </div>
-    </section>
-
-      <iframe src="https://t80-sup.herokuapp.com/map_only.html"  width="90%" height="560" name="map" align="center">MAP</iframe>
 
     <section class="wslab-section wslab-about">
     <div>
