privacy user data

--- a/wwwroot/privacy.html
+++ b/wwwroot/privacy.html
@@ -146,6 +146,21 @@
       </div>
     </section>
 
+    <section class="wslab-section wslab-partner">
+      <div style="text-align: left;">
+        <h5 class="wslab-section-label">広告・ユーザデータについて</h5>
+        <p>
+        本アプリでは、今後の開発の参考とするため、アプリの利用状況データを収集するツールとしてFirebase(Google Inc.)、PUSH配信サービスとしてPushwoosh（Pushwoosh）を使用しており、Firebaseがご利用者の情報を自動取得する場合があります。取得する情報、利用目的、第三者への提供等につきましては、以下のGoogleプライバシーポリシーのリンクよりご確認ください。<br><br>
+        Google プライバシーポリシー<br> 
+        https://policies.google.com/privacy?hl=ja<br>
+        Pushwoosh プライバシーポリシー<br> 
+        https://www.pushwoosh.com/privacy-policy/
+
+        </p>
+      </div>
+    </section>
+
+
     <section class="wslab-section wslab-contact">
       <div class="wslab-form-wrapper">
         <h5 class="wslab-section-label">当社の個人情報の取扱に関するお問い合せは下記までご連絡ください。</h5>
