Changed app download link

--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -91,37 +91,82 @@
       </div>
     </section>
 
-    <section class="wslab-section wslab-partner">
-      <div>
-        <img src="./img/logo_header_2019.png">
-        <h5 class="wslab-section-label">2019 ANAウインドサーフィンワールドカップ横須賀・三浦大会 観戦アプリDLはこちら</h5>
-          <ul>
-            <li  style="display: inline-block;">
-            <a href="https://itunes.apple.com/jp/app/gullcast/id1377975394">
-              <img src="https://linkmaker.itunes.apple.com/assets/shared/badges/ja-jp/appstore-lrg.svg" width="200" style="margin:15px 15px;" />
-            </a>
-            </li>
-            <li  style="display: inline-block;">
-              <a href="https://play.google.com/store/apps/details?id=com.windsurfinglab.gullcast">
-                <img src="https://play.google.com/intl/en_us/badges/images/generic/ja_badge_web_generic.png" width="230"  />
+    <section class="wslab-section app-dl">
+      <div class="wslab-flex-box-middle">
+        <table class="table">
+          <tr>
+            <td>
+              <img src="./img/logo_header_2019.png">
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h5 class="wslab-section-label">
+                2019 ANAウインドサーフィンワールドカップ横須賀・三浦大会 観戦アプリDLはこちら
+              </h5>
+            </td>
+          </tr>
+        </table>
+        <table class="table app-table">
+          <tr>
+            <td class="app-label">
+              iOS
+            </td>
+            <td class="app-label">
+              Android
+            </td>
+            <td class="app-label">
+              Mac
+            </td>
+            <td class="app-label">
+              Windows
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="https://itunes.apple.com/jp/app/gullcast/id1377975394">
+                <img src="img/appstore-lrg.svg"/>
               </a>
-            </li>
-          </ul>
+            </td>
+            <td>
+              <a href="https://play.google.com/store/apps/details?id=com.windsurfinglab.gullcast">
+                <img src="img/playstore-lrg.svg"/>
+              </a>
+            </td>
+            <td>
+              <a href="#">
+                <img src="img/macstore-lrg.svg"/>
+              </a>
+            </td>
+            <td>
+              <a href="player/gullcast.zip">
+                <img src="img/winpc-lrg.png"/>
+              </a>
+            </td>
+          </tr>
+        </table>
       </div>
     </section>
 
 
-
-    <section class="wslab-section wslab-partner">
-      <div>
-        <h5 class="wslab-section-label">おしらせ</h5>
-        <div style="text-align: left;">
-        <p>● 2019/05/02  - 2019 ANAウインドサーフィンワールドカップ横須賀・三浦大会観戦版のアップデート公開</p>
-        <p>● 2018/06/19 - [6/21-22] 長瀞ー豊洲 荒川１２０km SUPダウンリバーをサポート!</p>
-        <p>● 2018/05/10 - GULLCAST　ANAウインドサーフィンワールドカップ横須賀大会観戦版の公開！</p>
-        <p>● 2018/04/25 - GULLCAST観戦アプリケーションダウンロードサイトの準備中</p>
-        </div>
-      </div>
+    <section class="wslab-section wslab-notify">
+      <table>
+        <tr>
+          <td>
+            <h5 class="wslab-section-label">おしらせ</h5>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div style="text-align: left;">
+              <p>● 2019/05/02  - 2019 ANAウインドサーフィンワールドカップ横須賀・三浦大会観戦版のアップデート公開</p>
+              <p>● 2018/06/19 - [6/21-22] 長瀞ー豊洲 荒川１２０km SUPダウンリバーをサポート!</p>
+              <p>● 2018/05/10 - GULLCAST　ANAウインドサーフィンワールドカップ横須賀大会観戦版の公開！</p>
+              <p>● 2018/04/25 - GULLCAST観戦アプリケーションダウンロードサイトの準備中</p>
+            </div>
+          </td>
+        </tr>
+      </table>
     </section>
 
     <section class="wslab-section wslab-about">
