--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -163,7 +163,7 @@
         </div>
       </div>
     </section>
-    <section class="wslab-section wslab-partner">
+    <section class="wslab-section app-dl">
       <div>
         <h5 class="wslab-section-label">CREWINGを支持してくれているユーザー/パートナー</h5>
         <ul class="wslab-partner-list">
