--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -139,7 +139,8 @@
               </a>
             </td>
             <td>
-              <a href="player/gullcast.zip">
+
+              <a onClick="gtag('config','UA-87076416-3', {'page_path': '/player/gullcast.zip'});window.open('player/gullcast.zip');">
                 <img src="img/winpc-lrg.png"/>
               </a>
             </td>
