mac is not ready

--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -116,7 +116,7 @@
               Android
             </td>
             <td class="app-label">
-              Mac
+              Mac-準備中-
             </td>
             <td class="app-label">
               Windows
