--- a/wwwroot/en/gullcast.html
+++ b/wwwroot/en/gullcast.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-87076416-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-87076416-3');
+  </script>
   <title>Windsurfing lab</title>
   <meta charset="UTF-8">
   <meta http-equiv="Pragma" content="no-cache" />
@@ -81,15 +90,82 @@
       </div>
     </section>
 
-    <section class="wslab-section wslab-partner">
-      <div>
-        <h5 class="wslab-section-label">Information</h5>
-        <div style="text-align:left;"/>
-        <p>● 10/5/2018 - GULLCAST For ANA Windsurfing World Cup version was released!</p>
-        <p>● 25/4/2018 - Download site for GULLCAST watching application is in preparation.</p>
-        </div>
+    <section class="wslab-section app-dl">
+      <div class="wslab-flex-box-middle">
+        <table class="table">
+          <tr>
+            <td>
+              <img src="../img/logo_header_2019.png">
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h5 class="wslab-section-label">
+                Download live viewing app for 2019 Fly! ANA Windsurf World Cup, Yokosuka Japan
+              </h5>
+            </td>
+          </tr>
+        </table>
+        <table class="table app-table">
+          <tr>
+            <td class="app-label">
+              iOS
+            </td>
+            <td class="app-label">
+              Android
+            </td>
+            <td class="app-label">
+              Mac-WIP-
+            </td>
+            <td class="app-label">
+              Windows
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="https://itunes.apple.com/jp/app/gullcast/id1377975394">
+                <img src="../img/appstore-lrg.svg"/>
+              </a>
+            </td>
+            <td>
+              <a href="https://play.google.com/store/apps/details?id=com.windsurfinglab.gullcast">
+                <img src="../img/playstore-lrg.svg"/>
+              </a>
+            </td>
+            <td>
+              <a href="#">
+                <img src="../img/macstore-lrg.svg"/>
+              </a>
+            </td>
+            <td>
+
+              <a onClick="gtag('config','UA-87076416-3', {'page_path': '..//player/gullcast.zip'});window.open('../player/gullcast.zip');">
+                <img src="../img/winpc-lrg.png"/>
+              </a>
+            </td>
+          </tr>
+        </table>
       </div>
     </section>
+
+    <section class="wslab-section wslab-notify">
+      <table>
+        <tr>
+          <td>
+            <h5 class="wslab-section-label">Information</h5>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div style="text-align: left;">
+              <p>● 10/5/2018 - GULLCAST For ANA Windsurfing World Cup version was released!</p>
+              <p>● 25/4/2018 - Download site for GULLCAST watching application is in preparation.</p>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </section>
+
     <section class="wslab-section wslab-product">
       <div>
         <h5 class="wslab-section-label wslab-impressions">GULLCAST is a solution everyone can enjoy watching races more easy-to-understand.
