--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -134,7 +134,7 @@
               </a>
             </td>
             <td>
-              <a href="#">
+              <a onClick="gtag('config','UA-87076416-3', {'page_path': '/player/gullcast.pkg'});window.open('player/gullcast.pkg');">
                 <img src="img/macstore-lrg.svg"/>
               </a>
             </td>
