--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -160,6 +160,7 @@
         <tr>
           <td>
             <div style="text-align: left;">
+              <p>● 2019/05/10  - WindowsPC用画面を調整しました</p>
               <p>● 2019/05/02  - 2019 ANAウインドサーフィンワールドカップ横須賀・三浦大会観戦版のアップデート公開</p>
               <p>● 2018/06/19 - [6/21-22] 長瀞ー豊洲 荒川１２０km SUPダウンリバーをサポート!</p>
               <p>● 2018/05/10 - GULLCAST　ANAウインドサーフィンワールドカップ横須賀大会観戦版の公開！</p>
