--- a/wwwroot/en/gullcast.html
+++ b/wwwroot/en/gullcast.html
@@ -133,7 +133,7 @@
               </a>
             </td>
             <td>
-              <a onClick="gtag('config','UA-87076416-3', {'page_path': '/player/gullcast.pkg'});window.open('player/gullcast.pkg');">
+              <a onClick="gtag('config','UA-87076416-3', {'page_path': '/player/gullcast.pkg'});window.open('../player/gullcast_mac.zip');">
                 <img src="../img/macstore-lrg.svg"/>
               </a>
             </td>
