--- a/wwwroot/en/gullcast.html
+++ b/wwwroot/en/gullcast.html
@@ -115,7 +115,7 @@
               Android
             </td>
             <td class="app-label">
-              Mac-WIP-
+              Mac
             </td>
             <td class="app-label">
               Windows
