--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -116,7 +116,7 @@
               Android
             </td>
             <td class="app-label">
-              Mac-準備中-
+              Mac
             </td>
             <td class="app-label">
               Windows
@@ -135,7 +135,8 @@
             </td>
             <td>
               <a onClick="gtag('config','UA-87076416-3', {'page_path': '/player/gullcast.pkg'});window.open('player/gullcast_mac.zip');">
-                <img src="img/macstore-lrg.svg"/>
+                <!--img src="img/macstore-lrg.svg"/-->
+                <img src="img/winpc-lrg.png"/>
               </a>
             </td>
             <td>
