--- a/wwwroot/en/gullcast.html
+++ b/wwwroot/en/gullcast.html
@@ -55,7 +55,7 @@
         </li>
         <li>
           <a href="https://www.instagram.com/sensefoil/">
-            <img src="../img/icon-instagram.svg" alt="Instagram">
+           <img src="../img/icon-instagram.svg" alt="Instagram">
           </a>
         </li>
       </ul>
@@ -158,6 +158,7 @@
         <tr>
           <td>
             <div style="text-align: left;">
+              <p>● 12/5/2019 - Fix Bugs</p>
               <p>● 10/5/2018 - GULLCAST For ANA Windsurfing World Cup version was released!</p>
               <p>● 25/4/2018 - Download site for GULLCAST watching application is in preparation.</p>
             </div>
