mac app store OK

--- a/wwwroot/en/gullcast.html
+++ b/wwwroot/en/gullcast.html
@@ -133,7 +133,7 @@
               </a>
             </td>
             <td>
-              <a onClick="gtag('config','UA-87076416-3', {'page_path': '/player/gullcast.pkg'});window.open('../player/gullcast_mac.zip');">
+              <a onClick="gtag('config','UA-87076416-3', {'page_path': 'en/itune_mac_download'});window.open('https://itunes.apple.com/us/app/gullcast/id1462601371');">
                 <img src="../img/macstore-lrg.svg"/>
               </a>
             </td>
