--- a/wwwroot/gullcast.html
+++ b/wwwroot/gullcast.html
@@ -134,9 +134,8 @@
               </a>
             </td>
             <td>
-              <a onClick="gtag('config','UA-87076416-3', {'page_path': '/player/gullcast.pkg'});window.open('player/gullcast_mac.zip');">
-                <!--img src="img/macstore-lrg.svg"/-->
-                <img src="img/winpc-lrg.png"/>
+              <a onClick="gtag('config','UA-87076416-3', {'page_path': '/itune_mac_download'});window.open('https://itunes.apple.com/jp/app/gullcast/id1462601371?mt=12');">
+                <img src="img/macstore-lrg.svg"/>
               </a>
             </td>
             <td>
